# tiger-and-goat

./: .gitignore  LICENSE  Makefile  PROGRESS.md  README.md  TODO.md  board.py  caching.py  constants.py  game.py  graph.py  notations.py  notes.md  pieces.py  pyproject.toml  requirements.txt  setup.cfg  show_board_as_graph.ipynb  test_notations.py
.github/workflows/: ci.yml  deploy.yml
browser/: .eslintrc.cjs  .prettierrc.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
browser/src/: App.test.tsx  App.tsx  Constants.tsx  Debug.css  Debug.tsx  GoatLastEaten.tsx  GoatToPlace.css  GoatToPlace.tsx  GoatsEaten.css  GoatsEaten.tsx  GoatsToPlace.tsx  Nav.css  Nav.tsx  Piece.css  Piece.tsx  Rules.tsx  Square.css  Square.tsx  State.tsx  Strategies.tsx  Target.css  Target.tsx  api.ts  board.css  board.tsx  gameSource.ts  graph.ts  index.css  index.tsx  move.ts  notation.test.ts  notation.ts  page.css  utils.test.js  utils.ts
browser/src/data/: tournament.json
browser/src/engine/: engine.test.ts  game.ts  local.ts  negamax.ts  play.test.ts  (+1 more)
docs/: strategies-ranked.md  strategy-tournament-plan.md
infra/: .gitignore  Pulumi.tigergoat.yaml  Pulumi.yaml  __main__.py  pyproject.toml
server/: __init__.py  board.py  caching.py  constants.py  elo_tournament.py  game.py  graph.py  ls.py  notations.py  pieces.py  pyproject.toml  requirements.in  requirements.txt  show_board_as_graph.ipynb  strategies.py  test_game.py  test_graph.py  tournament.py  web.py
tests/: test_game.py  test_graph.py  test_notations.py  test_strategies.py  test_web.py
(+1 files in other folders)
