[project]
name = "tiger-and-goat"
version = "0.1.0"
description = "A browser-based game of Bagh-Chal (Tigers and Goats)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "easyai==2.0.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
